--- a/website/templates/connect.html
+++ b/website/templates/connect.html
@@ -109,6 +109,20 @@
         <div class="grid">
             <div>
                 <div class="image">
+                    <a href="/childrens_ministry"><img src="../static/images/childrens_ministry.jpg" class="image__img"></a>
+                    <div class="static__image__title">
+                        <p>Children's Ministry</p>
+                    </div>
+		            <a href="/childrens_ministry"><div class="image__overlay image__overlay--primary">
+			        <div class="image__title">Children's Ministry</div>
+			        <p class="image__description">
+				        Join the Children's Ministry!
+			        </p>
+                    </div></a>
+	            </div>
+            </div>
+            <div>
+                <div class="image">
                     <a href="/aberdeen"><img src="../static/images/aberdeen.webp" class="image__img"></a>
                     <div class="static__image__title">
                         <p>Aberdeen Campus</p>
@@ -125,10 +139,10 @@
                 <div class="image">
                     <a href="/youth"><img src="../static/images/youth.jpg" class="image__img"></a>
                     <div class="static__image__title">
-                        <p>Children & Youth Ministries</p>
+                        <p>Youth & Young Adults Ministry</p>
                     </div>
 		            <a href="/youth"><div class="image__overlay image__overlay--primary">
-			        <div class="image__title">Children & Youth Ministries</div>
+			        <div class="image__title">Youth & Young Adults Ministry</div>
 			        <p class="image__description">
 				        Join the Youth in Ministry!
 			        </p>
