--- a/website/templates/give.html
+++ b/website/templates/give.html
@@ -124,14 +124,16 @@
             <br><br>
             Thank you for your continued support!
             <br><br>
-            Office Administration
+            <a style="color: black; text-decoration: none;" href="https://www.shelbygiving.com/cp/Account/Login">Office Administration</a>
         </p>
         <div class="offering-container">
             <img src="../static/images/offering.jpg" class="offering-img">
         </div>
 
     </div>
-    <div class="buffer"></div>
+    <div class="buffer">
+        <h1>Alternate Giving</h1>
+    </div>
 
     <div class="grid-backdrop">
         <div class="grid">
