--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -116,15 +116,6 @@
                     <img src="../static/images/Sunday-School2.png" class="placeholder-img"></a>
             </div>
             <div>
-                <a style="text-decoration: none;color:black;" href="/aberdeen"><h2>Aberdeen Campus</h2></a>
-                <hr class="card-divider">
-                  <p>Join our ministry in Aberdeen, MS on 201 South Columbus Street.
-                      We would love to have you there!</p>
-                    <a style="text-decoration: none; color: black;" href="/aberdeen">
-                            <img src="../static/images/aberdeen-welcome.jpg" class="placeholder-img">
-                    </a>
-            </div>
-            <div>
                 <a style="text-decoration: none;color:black;" href="/give"><h2>Giving Portal</h2></a>
                 <hr class="card-divider">
                   <p>
@@ -135,9 +126,19 @@
 
             </div>
             <div>
+                <a style="text-decoration: none;color:black;" href="/aberdeen"><h2>Aberdeen Campus</h2></a>
+                <hr class="card-divider">
+                  <p>Join our ministry in Aberdeen, MS on 201 South Columbus Street.
+                      We would love to have you there!</p>
+                    <a style="text-decoration: none; color: black;" href="/aberdeen">
+                            <img src="../static/images/aberdeen-welcome.jpg" class="placeholder-img">
+                    </a>
+            </div>
+            <div>
                 <a style="text-decoration: none;color:black;" href="/"><h2>New Year's Fasting and Prayer</h2></a>
                 <hr class="card-divider">
-                  <p>Join us in corporate Fasting and Prayer as we welcome in the New Year. <br>January 8-12</p>
+                  <p>Join us in corporate Fasting and Prayer as we welcome in the New Year. <br>Every Monday-Wednesday
+                  of January</p>
                 <a style="text-decoration: none; color: black;" href="/">
                     <img src="../static/images/fasting-prayer.jpg" class="placeholder-img"></a>
 
@@ -157,7 +158,7 @@
                   <p>Get involved in any of our services. We would love to have you!
                      Our services are also livestreamed on YouTube @GBTnews!</p>
                 <a style="text-decoration: none; color: black;" href="/watch">
-                    <img src="../static/images/123.png" class="placeholder-img"></a>
+                    <img src="../static/images/weekly_services.jpeg" class="placeholder-img"></a>
 
             </div>
 <!--            <div>-->
