--- a/website/templates/what-to-expect.html
+++ b/website/templates/what-to-expect.html
@@ -97,7 +97,7 @@
     </div>
 
     <div class="history-container">
-                    <img src="../static/images/expect.png" class="history-img">
+                    <img src="../static/images/whoweare.png" class="history-img">
 
         <hr class="topic-divider">
         <div class="history-content">
