--- a/website/templates/youth.html
+++ b/website/templates/youth.html
@@ -161,10 +161,11 @@
             <div class="connect-content">
                 <h3>Get Connected</h3>
                 <p>
-                    Ready for an incredible journey of faith, friendship, and purpose? Connect with our Youth and discover
-                    a community that embraces and empowers you. Join us and be part of a vibrant and supportive network where
-                    you can grow spiritually and impact the world around you. Don't wait any longer – get connected with
-                    our Youth Ministry and embark on an exciting adventure that will shape your life!
+                    Ready for an incredible journey of faith, friendship, and purpose? Connect with our Youth & Young
+                    Adults Ministry and discover a community that embraces and empowers you. Join us and be part of a
+                    vibrant and supportive network where you can grow spiritually and impact the world around you.
+                    Don't wait any longer – get connected with the Youth of our Church, and embark on an exciting
+                    adventure that will shape your life!
                     <b>
 
                     <br> <br>Youth Service - Fridays 7PM<br> <br>
@@ -174,81 +175,8 @@
             </div>
         </div>
     </div>
-                    <div class="ministries-h2"><h2>Children's Ministry</h2></div>
-                    <hr class="ministries-divider">
-
-        <div class="our-impact">
-
-            <div class="impact-img">
-                <img src="../static/images/children.jpg">
-                <div class="impact-content">
 
 
-                    <h3>Our Impact</h3>
-        <!--        <hr class="heading-divider">-->
-
-                    <p>
-                        Our vibrant Children's Ministry, where young hearts find a home filled with love,
-                        laughter, and limitless possibilities! We believe in creating an engaging and nurturing environment
-                        that sparks joy and curiosity in every child. Through inspiring worship, interactive teachings,
-                        and exciting activities, we invite your little ones to embark on a faith-filled adventure like no
-                        other. Our dedicated team of caring leaders is committed to walking alongside your children as they
-                        grow in their relationship with God and discover their unique purpose in life. Join us and be part
-                        of a community that celebrates the wonder of childhood, builds lasting friendships, and encourages
-                        each child to shine brightly. Come and experience the warmth, fun, and transformative power of our
-                        Children's Ministry – where every child is cherished and embraced with open arms.
-                    </p>
-                </div>
-            </div>
-
-        </div>
-
-
-        <div class="buffer2"></div>
-
-
-        <div class="connect">
-            <div class="connect-back">
-                <div class="highlights-container">
-                    <div class="grid-backdrop">
-
-                <div class="grid">
-                    <div>
-                        <div class="image">
-                            <img src="../static/images/logo.png" class="image__img">
-                            <div class="image__overlay image__overlay--primary">
-                            <div class="image__title">Event Title</div>
-                            <div class="image__description">
-                                Event overview
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="more-grid-backdrop">
-
-                </div>
-            </div>
-            </div>
-
-                <div class="connect-content">
-                    <h3>Get Connected</h3>
-                    <p>
-                        Are you ready to embark on an incredible journey with our Children's Ministry? We invite you to
-                        get connected and become part of this thriving community that impacts young lives in profound ways.
-                        Whether you're a parent, guardian, or simply passionate about investing in the next generation,
-                        there are numerous opportunities for you to get involved. Join our dedicated team of volunteers
-                        and make a difference in the lives of our children. You can also participate in our engaging
-                        programs, attend special events, and support our ministry through your presence and prayers.
-                        Together, let's create a nurturing and inspiring environment where children can grow in their
-                        faith, build lifelong friendships, and discover their unique potential. Come and be part of the joy,
-                        laughter, and transformation happening in our Children's Ministry. We can't wait to welcome you
-                        into our community!
-                    </p>
-                </div>
-            </div>
-        </div>
 
 
 
