--- a/website/templates/childrens_ministry.html
+++ b/website/templates/childrens_ministry.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../static/css/watch.css">
-<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/css/childrens_ministry.css">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -14,8 +14,8 @@
       const navToggle = document.querySelector('.nav-toggle');
       const mobileNavLogo = document.querySelector('.mobile-nav-logo');
       const navToggleLabel = document.querySelector('.nav-toggle-label');
-      const banner = document.querySelector('.banner');
-      const buffer = document.querySelector('.buffer');
+      const mobileBanner = document.querySelector('.mobile-banner');
+      const spacer = document.querySelector('.spacer');
 
 
       if (userAgent.includes('android') ||
@@ -33,8 +33,8 @@
         mobileNavLogo.classList.add('mobile');
         navToggleLabel.classList.add('mobile');
         navToggle.classList.add('mobile');
-        banner.classList.add('mobile');
-        buffer.classList.add('mobile');
+        mobileBanner.classList.add('mobile');
+        spacer.classList.add('mobile');
 
 
       } else {
@@ -44,14 +44,13 @@
         mobileNavLogo.classList.add('desktop');
         navToggleLabel.classList.add('desktop');
         navToggle.classList.add('desktop');
-        banner.classList.add('desktop');
-        buffer.classList.add('desktop');
+        mobileBanner.classList.add('desktop');
+        spacer.classList.add('desktop');
 
       }
     });
   </script>
 
-    <script src="https://www.youtube.com/iframe_api"></script>
     <title>Greater Bethlehem Temple Church</title>
 </head>
 <body>
@@ -74,41 +73,112 @@
             </label>
         </div>
     </header>
+
+
+
+
+
     <div class="banner">
-        <img src="../static/images/temple.jpg" class="banner-img">
+        <img src="../static/images/connect.jpg" class="event-img">
         <div class="banner-h-container">
-            <h2>Watch Live</h2>
+            <h2>Ministries</h2>
         </div>
         <div class="banner-msg">
-            <p>Stay Spiritually Connected Wherever You Are</p>
+            <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
+                We would love to welcome you to our family, or simply connect with a phone call to check in on you.
+                We would love to get to know you and your family!
+            </p>
         </div>
     </div>
-
+    <div class="mobile-banner">
+        <div class="mobile-banner-h-container">
+            <h2>Ministries</h2>
+        </div>
+        <img src="../static/images/connect.jpg" class="mobile-offering-img">
+    </div>
+            <div class="spacer"></div>
 
     <div class="buffer"></div>
-    <div class="watch-logos">
-            <h5>Subscribe to GBTnews and Connect with us on Facebook</h5>
-            <div class="watch-socials">
-                <a href="https://www.facebook.com/GBTchurch" class="watch-logo-container">
-                    <img src="../static/images/fb.png" class="watch-logo"></a>
-                <a href="https://twitter.com/GBTnews" class="watch-logo-container">
-                    <img src="../static/images/twitt.png" class="watch-logo"></a>
-                <a href="https://www.youtube.com/@GBTnews/streams" class="watch-logo-container">
-                    <img src="../static/images/yt.png" class="watch-logo"></a>
-                <a href="/" class="watch-logo-container"><img src="../static/images/insta.png" class="watch-logo"></a>
+
+
+                    <div class="ministries-h2"><h2>Children's Ministry</h2></div>
+                    <hr class="ministries-divider">
+
+        <div class="our-impact">
+
+            <div class="impact-img">
+                    <img src="../static/images/children2.jpg">
+                <div class="impact-content">
+
+
+                    <h3>Our Impact</h3>
+        <!--        <hr class="heading-divider">-->
+
+                    <p>
+                        Our vibrant Children's Ministry, where young hearts find a home filled with love,
+                        laughter, and limitless possibilities! We believe in creating an engaging and nurturing environment
+                        that sparks joy and curiosity in every child. Through inspiring worship, interactive teachings,
+                        and exciting activities, we invite your little ones to embark on a faith-filled adventure like no
+                        other. Our dedicated team of caring leaders is committed to walking alongside your children as they
+                        grow in their relationship with God and discover their unique purpose in life. Join us and be part
+                        of a community that celebrates the wonder of childhood, builds lasting friendships, and encourages
+                        each child to shine brightly. Come and experience the warmth, fun, and transformative power of our
+                        Children's Ministry – where every child is cherished and embraced with open arms.
+                    </p>
+                </div>
             </div>
-    </div>
+
+        </div>
 
 
-    <div class="videoWrapper">
-        <iframe
-            src="https://www.youtube.com/embed/videoseries?listType=playlist&list=UUpNnNqSJXR_QzmAMM8DeVxQ"
-            frameborder="0" allowfullscreen>
-        </iframe>
-    </div>
+        <div class="buffer2"></div>
 
 
-    <div class="buffer"></div>
+        <div class="connect">
+            <div class="connect-back">
+                <div class="highlights-container">
+                    <div class="grid-backdrop">
+
+                <div class="grid">
+                    <div>
+                        <div class="image">
+                            <img src="../static/images/logo.png" class="image__img">
+                            <div class="image__overlay image__overlay--primary">
+                            <div class="image__title">Event Title</div>
+                            <div class="image__description">
+                                Event overview
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="more-grid-backdrop">
+
+                </div>
+            </div>
+            </div>
+
+                <div class="connect-content">
+                    <h3>Get Connected</h3>
+                    <p>
+                        Are you ready to embark on an incredible journey with our Children's Ministry? We invite you to
+                        get connected and become part of this thriving community that impacts young lives in profound ways.
+                        Whether you're a parent, guardian, or simply passionate about investing in the next generation,
+                        there are numerous opportunities for you to get involved. Join our dedicated team of volunteers
+                        and make a difference in the lives of our children. You can also participate in our engaging
+                        programs, attend special events, and support our ministry through your presence and prayers.
+                        Together, let's create a nurturing and inspiring environment where children can grow in their
+                        faith, build lifelong friendships, and discover their unique potential. Come and be part of the joy,
+                        laughter, and transformation happening in our Children's Ministry. We can't wait to welcome you
+                        into our community!
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+
 
       <div class="footer-container">
     <div class="column">
