DONE - compressed some images
going live soon

last fixes

fixed event popup title

--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -125,7 +125,7 @@
 
         <div class="grid">
             <div>
-                <div class="image" onclick="openPopup('../static/images/basketball.jpg', 'Event Title 1', 'Event overview 1')">
+                <div class="image" onclick="openPopup('../static/images/basketball.jpg', 'Youth Basketball League', 'Event overview 1')">
                     <img src="../static/images/basketball.jpg" class="image__img">
 		            <div class="image__overlay image__overlay--primary">
 			        <div class="image__title" style="text-align:center;">Youth Basketball League</div>
@@ -136,10 +136,10 @@
 	            </div>
             </div>
             <div>
-                <div class="image" onclick="openPopup('../static/images/p_f.jpg', 'Event Title 2', 'Event overview 2')">
+                <div class="image" onclick="openPopup('../static/images/p_f.jpg', 'New Year's Fasting and Prayer', 'Event overview 2')">
                     <img src="../static/images/p_f.jpg" class="image__img">
 		            <div class="image__overlay image__overlay--primary">
-			        <div class="image__title"style="text-align:center;">New Year's Fasting and Prayer</div>
+			        <div class="image__title" style="text-align:center;">New Year's Fasting and Prayer</div>
 			        <p class="image__description">
 				        Fasting and Prayer every Mon, Tues, and Wed of January
 			        </p>
@@ -147,10 +147,10 @@
 	            </div>
             </div>
             <div>
-                <div class="image" onclick="openPopup('../static/images/logo.png', 'Event Title 3', 'Event overview 3')">
+                <div class="image" onclick="openPopup('../static/images/logo.png', 'Have An Announcment?', 'Event overview 3')">
                     <img src="../static/images/logo.png" class="image__img">
 		            <div class="image__overlay image__overlay--primary">
-			        <div class="image__title"style="text-align:center;">Have An Announcement?</div>
+			        <div class="image__title" style="text-align:center;">Have An Announcement?</div>
 			        <p class="image__description">
 				        Contact Communications Dept.
 			        </p>
@@ -158,10 +158,10 @@
 	            </div>
             </div>
             <div>
-                <div class="image" onclick="openPopup('../static/images/logo.png', 'Event Title 4', 'Event overview 4')">
+                <div class="image" onclick="openPopup('../static/images/logo.png', 'Have An Announcment?', 'Event overview 4')">
                     <img src="../static/images/logo.png" class="image__img">
 		            <div class="image__overlay image__overlay--primary">
-			        <div class="image__title"style="text-align:center;">Have An Announcement?</div>
+			        <div class="image__title" style="text-align:center;">Have An Announcement?</div>
 			        <p class="image__description">
 				        Contact Communications Dept.
 			        </p>
