DONE - compressed some images
going live soon

last fixes

fixed event popup title

--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -136,10 +136,10 @@
 	            </div>
             </div>
             <div>
-                <div class="image" onclick="openPopup('../static/images/p_f.jpg', 'New Year's Fasting and Prayer', 'Event overview 2')">
+                <div class="image" onclick="openPopup('../static/images/p_f.jpg', 'New Year\'s Prayer and Fasting', 'Event overview 2')">
                     <img src="../static/images/p_f.jpg" class="image__img">
 		            <div class="image__overlay image__overlay--primary">
-			        <div class="image__title" style="text-align:center;">New Year's Fasting and Prayer</div>
+			        <div class="image__title" style="text-align:center;">New Year's Prayer and Fasting</div>
 			        <p class="image__description">
 				        Fasting and Prayer every Mon, Tues, and Wed of January
 			        </p>
