--- a/website/templates/about-us.html
+++ b/website/templates/about-us.html
@@ -101,7 +101,7 @@
         </h2>
         <hr class="topic-divider">
         <div class="history-content">
-            <img src="../static/images/coleman.jpg" class="history-img">
+            <img src="../static/images/coleman_bw.jpg.jpeg" class="history-img">
             <p>
                 Greater Bethlehem Temple Church was founded in 1954 by Elder Phillip Coleman, a young minister whose life
                 had been completely changed a year earlier in Detroit, Michigan. He had visited Clinton Street Bethlehem
