--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -91,13 +91,13 @@
 
 
     <div class="banner">
-        <img src="../static/images/table.jpg" class="event-img">
+        <img src="../static/images/eventssplash.jpg.jpeg" class="event-img">
         <div class="banner-h-container">
             <h2>EVENTS</h2>
         </div>
         <div class="banner-msg">
-            <p>We would love to see you and your family here at Greater Bethlehem Temple.
-                Check out what's going on and then make plans to be with us!
+            <p>Be sure to check our calendar below for exciting events coming soon. We’d love to have you join us.
+                For more information on these events and more, contact our Office of Communication
             </p>
         </div>
     </div>
@@ -125,12 +125,14 @@
 
         <div class="grid">
             <div>
-                <div class="image" onclick="openPopup('../static/images/basketball.jpg', 'Youth Basketball League', 'Event overview 1')">
-                    <img src="../static/images/basketball.jpg" class="image__img">
+                <div class="image" onclick="openPopup('../static/images/conference2024.png', '2024 PCAF Midwinter', 'Event overview 3')">
+                    <img src="../static/images/conference2024.png" class="image__img">
 		            <div class="image__overlay image__overlay--primary">
-			        <div class="image__title" style="text-align:center;">Youth Basketball League</div>
+			        <div class="image__title" style="text-align:center;">2024 PCAF Midwinter</div>
 			        <p class="image__description">
-				        click for more info
+				        The 67th Annual Bishops Board Meeting and L.E.A.D. Conference will convene March 6-9 in
+                        Indianapolis. Visit www.pcafintl.org.
+                        <br><br><br>click to enlarge image
 			        </p>
 		            </div>
 	            </div>
@@ -147,12 +149,12 @@
 	            </div>
             </div>
             <div>
-                <div class="image" onclick="openPopup('../static/images/logo.png', 'Have An Announcment?', 'Event overview 3')">
-                    <img src="../static/images/logo.png" class="image__img">
+                <div class="image" onclick="openPopup('../static/images/basketball.jpg', 'Youth Basketball League', 'Event overview 1')">
+                    <img src="../static/images/basketball.jpg" class="image__img">
 		            <div class="image__overlay image__overlay--primary">
-			        <div class="image__title" style="text-align:center;">Have An Announcement?</div>
+			        <div class="image__title" style="text-align:center;">Youth Basketball League</div>
 			        <p class="image__description">
-				        Contact Communications Dept.
+				        click to enlarge image
 			        </p>
 		            </div>
 	            </div>
