--- a/website/templates/give.html
+++ b/website/templates/give.html
@@ -79,13 +79,13 @@
     </header>
 
     <div class="banner">
-        <img src="../static/images/basket.jpg" class="giving-img">
+        <img src="../static/images/seed.jpeg" class="giving-img">
         <div class="banner-h-container">
             <h2>GIVING TO BUILD GOD'S KINGDOM</h2>
         </div>
         <div class="banner-msg">
             <p>When you support the ministry of Greater Bethlehem Temple, you are making an impact locally
-                and internationally. Thank you for your donation, it is seed sown in good soil!
+                and internationally. Thank you for your donation. It is seed sown in good soil!
             </p>
         </div>
         <div class="floating-button-container">
@@ -127,12 +127,13 @@
             <a style="color: black; text-decoration: none;" href="https://www.shelbygiving.com/cp/Account/Login">Office Administration</a>
         </p>
         <div class="offering-container">
-            <img src="../static/images/offering.jpg" class="offering-img">
+            <img src="../static/images/tithes.png" class="offering-img">
         </div>
 
     </div>
     <div class="buffer">
         <h1>Alternate Giving</h1>
+        <hr class="ministries-divider">
     </div>
 
     <div class="grid-backdrop">
@@ -200,16 +201,16 @@
     </div>
     <div class="buffer"></div>
 
-    <div class="pledge-container">
-            <h2>Ongoing Pledges</h2>
-            <hr class="pledge-divider">
-            <img src="../static/images/landmark.jpg" class="placeholder-img">
-            <p>We're on a mission to help our sister church, Landmark Temple of Holly Springs, Mississippi, build a
-                new worship facility. The current building is in severe disrepair, and the members need our support
-                to help secure a new church building. Please consider a pledge of $1000 or an amount you can afford,
-                payable by April 1, 2023. Thank you for your prayerful support.
-            </p>
-        </div>
+<!--    <div class="pledge-container">-->
+<!--            <h2>Ongoing Pledges</h2>-->
+<!--            <hr class="pledge-divider">-->
+<!--            <img src="../static/images/landmark.jpg" class="placeholder-img">-->
+<!--            <p>We're on a mission to help our sister church, Landmark Temple of Holly Springs, Mississippi, build a-->
+<!--                new worship facility. The current building is in severe disrepair, and the members need our support-->
+<!--                to help secure a new church building. Please consider a pledge of $1000 or an amount you can afford,-->
+<!--                payable by April 1, 2023. Thank you for your prayerful support.-->
+<!--            </p>-->
+<!--        </div>-->
 
         <div class="buffer"></div>
 
