--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -108,6 +108,17 @@
     <div class="grid-backdrop">
         <div class="grid">
             <div>
+                <a style="text-decoration: none;color:black;" href="https://www.pcafintl.org/"><h2>2024 PCAF Midwinter</h2></a>
+                <hr class="card-divider">
+                  <p>The 67th Annual Bishops Board Meeting and L.E.A.D. Conference will convene
+                        March 6-9 in Indianapolis.
+                            Visit www.pcafintl.org.</p>
+                <a style="text-decoration: none; color: black;" href="https://www.pcafintl.org/">
+                    <img src="../static/images/conference2024.png" class="placeholder-img"></a>
+
+            </div>
+
+            <div>
                 <a style="text-decoration: none;color:black;" href="/sundayschool"><h2>Sunday School</h2></a>
                 <hr class="card-divider">
                   <p>Join us in Sunday School every Sunday Morning from 9:45 - 10:45. All ages
@@ -122,7 +133,7 @@
                       Thank you for being a cheerful giver. Your generosity supports the various ministries at GBT.
                       </p>
                 <a style="text-decoration: none; color: black;" href="/give">
-                    <img src="../static/images/offering.jpg" class="placeholder-img"></a>
+                    <img src="../static/images/tithes.png" class="placeholder-img"></a>
 
             </div>
             <div>
@@ -134,15 +145,15 @@
                             <img src="../static/images/aberdeen-welcome.jpg" class="placeholder-img">
                     </a>
             </div>
-            <div>
-                <a style="text-decoration: none;color:black;" href="/"><h2>New Year's Fasting and Prayer</h2></a>
-                <hr class="card-divider">
-                  <p>Join us in corporate Fasting and Prayer as we welcome in the New Year. <br>Every Monday-Wednesday
-                  of January</p>
-                <a style="text-decoration: none; color: black;" href="/">
-                    <img src="../static/images/fasting-prayer.jpg" class="placeholder-img"></a>
+<!--            <div>-->
+<!--                <a style="text-decoration: none;color:black;" href="/"><h2>New Year's Fasting and Prayer</h2></a>-->
+<!--                <hr class="card-divider">-->
+<!--                  <p>Join us in corporate Fasting and Prayer as we welcome in the New Year. <br>Every Monday-Wednesday-->
+<!--                  of January</p>-->
+<!--                <a style="text-decoration: none; color: black;" href="/">-->
+<!--                    <img src="../static/images/fasting-prayer.jpg" class="placeholder-img"></a>-->
 
-            </div>
+<!--            </div>-->
             <div>
                 <a style="text-decoration: none;color:black;" href="/youth"><h2>Youth Ministry</h2></a>
                 <hr class="card-divider">
@@ -161,15 +172,6 @@
                     <img src="../static/images/weekly_services.jpeg" class="placeholder-img"></a>
 
             </div>
-<!--            <div>-->
-<!--                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>-->
-<!--                <hr class="card-divider">-->
-<!--                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,-->
-<!--                        ut rhoncus mauris eleifend at.</p>-->
-<!--                <a style="text-decoration: none; color: black;" href="/">-->
-<!--                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>-->
-
-<!--            </div>-->
 <!--            <div>-->
 <!--                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>-->
 <!--                <hr class="card-divider">-->
