--- a/website/templates/sundayschool.html
+++ b/website/templates/sundayschool.html
@@ -108,7 +108,7 @@
     <div class="our-impact">
 
         <div class="impact-img">
-            <img src="../static/images/sundayskool.jpg">
+            <img src="../static/images/sundayschool.jpeg">
             <div class="impact-content">
 
 
@@ -144,7 +144,7 @@
             <div class="grid">
                 <div>
                     <div class="image">
-                        <img src="../static/images/Sunday-School1.jpg" class="image__img">
+                        <img src="../static/images/Sunday-School.jpg" class="image__img">
                         <div class="image__overlay image__overlay--primary">
                         <div class="image__title">Join US!</div>
                         <div class="image__description">
@@ -167,7 +167,11 @@
                     Join our Sunday School Ministry and discover the joy of learning, growing, and connecting with
                     God and others. All ages are welcome as we dive into engaging lessons, build lasting friendships,
                     and deepen our faith journey together. Get connected and experience the transformative power of
-                    Sunday School in a warm and welcoming community.
+                    Sunday School in a warm and welcoming community.<br><br>
+                    <b>
+                        Sunday Morning - 10:30<br><br>
+
+                        Zoom Link:<b>
                 </p>
             </div>
         </div>
