--- a/website/static/css/events.css
+++ b/website/static/css/events.css
@@ -540,12 +540,12 @@ h4{
         }
 
         .popup-content {
-            overflow: hidden;
+            overflow: scrolling;
         }
 
         .popup-image {
-            width: 100%;
-            height: 100%;
+            width: auto;
+            height: 800px;
         }
 @media screen and (min-width: 1000px){
 
@@ -937,6 +937,8 @@ h4{
 .image__title {
 	font-size: 2em;
 	font-weight: bold;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
 .image__description {
@@ -944,6 +946,8 @@ h4{
 	margin-top: 1.5em;
 	display: flex;
 	text-align: center;
+	margin-left: 5px;
+	margin-right: 5px;
 
 }
 
