--- a/website/templates/sundayschool.html
+++ b/website/templates/sundayschool.html
@@ -169,9 +169,16 @@
                     and deepen our faith journey together. Get connected and experience the transformative power of
                     Sunday School in a warm and welcoming community.<br><br>
                     <b>
-                        Sunday Morning - 10:30<br><br>
+                        Sunday Morning - @10:30<br><br>
 
-                        Zoom Link:<b>
+                        Adult Zoom Link:<a href="https://us02web.zoom.us/j/82979429388?pwd=RGdpYUVoZDVkVkZWTjVzeDl2Nk5hUT09" target="_blank" class="join-button">JOIN</a>
+                        <br><br>
+                        Youth Zoom Link:<a href="https://us06web.zoom.us/j/92797576389?pwd=Z0JWZE55eDBaNFVTZ3N1NnZ1cGVJUT09" target="_blank" class="join-button">JOIN</a>
+                        <br><br>
+                        Children Zoom Link:<a href="https://us06web.zoom.us/j/96469331609?pwd=a2FoZEZGUDFkTUdZZzkyVC8xc3oyQT09" target="_blank" class="join-button">JOIN</a>
+
+                        <b>
+
                 </p>
             </div>
         </div>
